# dd-project

./: .gitignore  Procfile  bot.py  pyproject.toml  requirements.txt  ssh  ssh.pub
src/: db.sqlite3
src/core/: admin.py  apps.py  context.py  forms.py  models.py  notify.py  serializers.py  signals.py  stations.py  utils.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_order_options_order_consent_pdn_and_more.py  0003_order_consent_ip_order_consent_ua.py  0004_order_consent_order_consent_at.py  0005_order_public_token_order_telegram_chat_id.py  0006_alter_order_public_token.py  0007_alter_order_public_token_and_more.py  0008_alter_order_telegram_chat_id.py  0009_notifylock.py  0010_order_last_client_status_notified.py
src/core/templates/core/: aero.html  base.html  benefits.html  concept.html  contacts.html  dostavka_bagazha_moskva.html  faq.html  hub.html  index.html  kamera_hraneniya_bagazha_moskva.html  luggage_storage_moscow.html  offer.html  order_form.html  order_success.html  privacy.html  robots.txt  sitemap.xml  station.html  storage_moscow.html  utils.py  where_to_leave_luggage.html  yandex_d9211e0eacffb670.html
src/core/templates/core/partials/: _faq_block.html  _faq_jsonld.html  yandex_rating_badge.html
src/dandd/: asgi.py  settings.py  urls.py  wsgi.py
